# FFT_HPC_Project

./: CMakeLists.txt  README.md  fft_4speeds_clean  fft_4speeds_clean.cu  fft_gpu  fft_gpu.cu  fft_parallel  fft_parallel.c  fft_sequencial  fft_sequencial.c
